# model/key.go
@@ -5,6 +5,15 @@ type APIKey struct {
 	UserId string `gorm:"index"`
 	User   User   `json:"-"`
 	Mask   string `gorm:"index" json:"-"`
+	Key    []byte `gorm:"type:bytea"`
+	Scopes string
+}
+
+type DisplayAPIKey struct {
+	Base
+	UserId string
+	User   User   `json:"-"`
+	Mask   string `json:"-"`
 	Key    string
 	Scopes string
 }
